Basket and full frontend DONE - Testing DONE
